# diol

./: Cargo.toml  LICENSE  README.md
examples/: compare.rs  plot.rs  simple.rs
src/: lib.rs
src/typst_imp/: mod.rs  templates.rs
