[package]
name = "diol"
version = "0.8.2"
edition = "2021"
authors = ["sarah <>"]
description = "benchmark lib"
readme = "README.md"
repository = "https://github.com/sarah-ek/diol/"
license = "MIT"
keywords = ["benchmark"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colorgrad = "0.6.2"
dyn-clone = "1.0.17"
equator = "0.2.0"
plotters = { version = "0.3.5", optional = true }
prettyplease = "0.2.19"
quote = "1.0.36"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
syn = { version = "2.0.60", features = ["extra-traits"] }
toml = "0.8.12"

[features]
default = ["plot"]
plot = ["dep:plotters"]

[dev-dependencies]
popcnt = "0.1.0"
pulp = "0.18.10"
