[package]
name = "diol"
version = "0.13.1"
edition = "2021"
authors = ["sarah <>"]
description = "benchmark lib"
readme = "README.md"
repository = "https://github.com/sarah-ek/diol/"
license = "MIT"
keywords = ["benchmark"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colorgrad = "0.6.2"
dyn-clone = "1.0.17"
equator = "0.2.0"
prettyplease = "0.2.19"
quote = "1.0.36"
regex = "1.10.4"
eyre = "0.6.12"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
syn = { version = "2.0.60", features = ["extra-traits"] }
toml = "0.8.12"

reqwest = { version = "0.12.15", features = ["blocking"], optional = true }
time = { version = "0.3.41", features = ["local-offset"], optional = true }
typst-assets = { version = "0.13.1", features = ["fonts"], optional = true }
flate2 = { version = "1.1.0", optional = true }
tar = { version = "0.4.44", optional = true }
typst = { version = "0.13.1", optional = true }
typst-pdf = { version = "0.13.1", optional = true }
typst-svg = { version = "0.13.1", optional = true }
ttf-parser = { version = "0.25.1", optional = true }
average = "0.16.0"

[features]
default = []
typst = [
  "dep:reqwest",
  "dep:time",
  "dep:typst-assets",
  "dep:flate2",
  "dep:tar",
  "dep:typst",
  "dep:typst-pdf",
  "dep:typst-svg",
  "dep:ttf-parser",
]

[dev-dependencies]
popcnt = "0.1.0"
pulp = "0.18.10"
